overflow x mobile fix try 2

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,12 @@ body {
 
 @media only screen and (max-width: 500px) {
 
+  body {
+    background-color: #add8e6;
+    overflow-x: hidden !important;
+  }
+
+
   .topsection{
     overflow-x: hidden;
     display: flex;
@@ -168,7 +174,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 100%;
+    width: 100vw;
     background-color: white;
 
   }
